Updated libraries